added hero section

--- a/main.html
+++ b/main.html
@@ -4,10 +4,72 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <title>Frontend Mentor | [Blogr]</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <!--   Hero section                     -->
+    <section class="bg-light_red h-[68vh] sm:h-[60vh] w-full rounded-bl-[60px]
+     bg-no-repeat bg-cover bg-center"
+     style="background-image: url(./images/bg-pattern-intro-desktop.svg);">
+            <div class="text-white text-2xl max-w-screen-xl h-auto px-20 py-5">
+                <h1 class="font-overpass font-semibold inline-block">Blogr</h1>
+                <nav class="inline-block text-sm">
+                    <div class="mx-auto max-w-screen md:px-6">
+                        <div class="flex items-center">
+                            <ul class="flex flex-col sm:flex-row sm:space-x-5 ">
+                                <li>
+                                    <a href="#" class="text-white hover:underline underline-offset-8 decoration-1">Product 
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="text-white hover:underline underline-offset-8 decoration-1">Company</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="text-white hover:underline underline-offset-8 decoration-1">Connect</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+                <div class="inline-flex sm:float-right mt-2 text-sm ">
+                    <span class="sm:mr-3">Login</span>
+                    <span class="sm:ml-3 sm:px-5 py-2 -mt-2 bg-white rounded-2xl text-light_red hover:text-white hover:bg-light_red">Sign up</span>
+                </div>
+            </div>
+            <div class="flex sm:flex-col justify-center items-center text-center h-[50vh]">
+                <div class="text-white font-overpass ">
+                    <h1 class="text-5xl">A modern publishing platform</h1>
+                    <h5 class="text-center pt-5 font-thin">Grow your audience and build your online board</h5>
+                    <div class="text-center mt-5">
+                        <button class="bg-white text-light_red px-4 py-2 rounded-3xl hover:bg-light_red hover:text-white sm:mr-4">Start For Free</button>
+                        <button class="bg-light_red text-white px-5 py-2 rounded-3xl border-[1px] border-white hover:bg-white hover:text-light_red mt-2 sm:mt-0">Learn More</button>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <section class="herosection mt-20">
+        <div class="text-center">
+            <h1 class="text-very_dark_blue text-3xl font-overpass font-semibold sm:relative sm:z-0">Designed for the future</h1>
+        </div>
+        <div class="grid grid-cols-1 sm:grid-cols-2  place-content-center mt-10">
+            <div class="order-2 pl-8 sm:order-1 sm:pl-14 text-very_dark_blue font-normal font-overpass sm:z-10">
+                <div class="mt-14">
+                    <h1 class="text-2xl">Introducing an extensible editor</h1>
+                <p class="text-greyish_blue font-overpass text-sm mt-4 text-justify mr-8 sm:mr-16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, recusandae natus? Quasi veniam ullam explicabo esse, vel fugit voluptatibus cumque quibusdam necessitatibus non illo rem praesentium sapiente maiores impedit incidunt magni. Nisi cum quis doloribus, molestias atque, quas repudiandae harum nobis, itaque molestiae iure tempore modi esse voluptatum dignissimos illo.</p>
+                </div>
+                <div class=" mt-14">
+                    <h1 class="text-2xl">Robost content management</h1>
+                    <p class="text-greyish_blue font-overpass text-sm mt-4 text-justify mr-16">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error accusantium recusandae consectetur ipsam hic dicta laborum aliquam ratione, nostrum ipsum dolor temporibus sunt! A facilis doloremque libero eligendi magni, impedit aperiam sequi ab recusandae consequatur doloribus officiis maiores aspernatur, debitis, ut officia fuga praesentium consectetur voluptates odio repudiandae. Enim, quas.
+                    </p>
+                </div>
+            </div>
+            <div class="order-1 sm:order-2  sm:overflow-hidden sm:z-40">
+                <img src="./images/illustration-editor-desktop.svg" alt=""class="max-w-full sm:max-w-[55vw] sm:relative sm:-right-12 sm:-top-24">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
