added 3rd section

--- a/main.html
+++ b/main.html
@@ -49,27 +49,45 @@
                 </div>
             </div>
     </section>
-    <section class="herosection mt-20">
+    <section class="herosection mt-20 z-10">
         <div class="text-center">
-            <h1 class="text-very_dark_blue text-3xl font-overpass font-semibold sm:relative sm:z-0">Designed for the future</h1>
+            <h1 class="text-very_dark_blue text-3xl font-overpass font-semibold md:relative">Designed for the future</h1>
         </div>
-        <div class="grid grid-cols-1 sm:grid-cols-2  place-content-center mt-10">
-            <div class="order-2 pl-8 sm:order-1 sm:pl-14 text-very_dark_blue font-normal font-overpass sm:z-10">
+        <div class="grid grid-cols-1 md:grid-cols-2  place-content-center mt-10">
+            <div class="order-2 pl-8 md:order-1 sm:pl-14 text-very_dark_blue font-normal font-overpass md:z-10">
                 <div class="mt-14">
                     <h1 class="text-2xl">Introducing an extensible editor</h1>
-                <p class="text-greyish_blue font-overpass text-sm mt-4 text-justify mr-8 sm:mr-16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, recusandae natus? Quasi veniam ullam explicabo esse, vel fugit voluptatibus cumque quibusdam necessitatibus non illo rem praesentium sapiente maiores impedit incidunt magni. Nisi cum quis doloribus, molestias atque, quas repudiandae harum nobis, itaque molestiae iure tempore modi esse voluptatum dignissimos illo.</p>
+                <p class="text-greyish_blue font-overpass text-base mt-4 text-justify mr-8 md:mr-16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, recusandae natus? Quasi veniam ullam explicabo esse, vel fugit voluptatibus cumque quibusdam necessitatibus non illo rem praesentium sapiente maiores impedit incidunt magni. Nisi cum quis doloribus, molestias atque, quas repudiandae harum nobis, itaque molestiae iure tempore modi esse voluptatum dignissimos illo.</p>
                 </div>
                 <div class=" mt-14">
                     <h1 class="text-2xl">Robost content management</h1>
-                    <p class="text-greyish_blue font-overpass text-sm mt-4 text-justify mr-16">
+                    <p class="text-greyish_blue font-overpass text-base mt-4 text-justify mr-16">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error accusantium recusandae consectetur ipsam hic dicta laborum aliquam ratione, nostrum ipsum dolor temporibus sunt! A facilis doloremque libero eligendi magni, impedit aperiam sequi ab recusandae consequatur doloribus officiis maiores aspernatur, debitis, ut officia fuga praesentium consectetur voluptates odio repudiandae. Enim, quas.
                     </p>
                 </div>
             </div>
-            <div class="order-1 sm:order-2  sm:overflow-hidden sm:z-40">
+            <div class="order-1 md:order-2  md:overflow-hidden md:z-40">
                 <img src="./images/illustration-editor-desktop.svg" alt=""class="max-w-full sm:max-w-[55vw] sm:relative sm:-right-12 sm:-top-24">
             </div>
         </div>
+    </section>
+    <section class="z-0 mt-20 h-[25vh] sm:h-[50vh] bg-gradient-to-r from-very_dark_blue to-black_blue rounded-tr-[120px] rounded-bl-[120px]">
+        <div class="grid grid-cols-1 sm:grid-cols-2">
+            <div>   
+                <picture class="sm:overflow-hidden sm:z-10">
+                    <img src="./images/bg-pattern-circles.svg" alt="phones background pattern" class="w-28 sm:w-screen sm:relative sm:-top-36 ">
+                </picture>
+                <picture class="z-20">
+                    <img src="./images/illustration-phones.svg" alt="phones" class="sm:w-full relative sm:-top-[55%] sm:left-10">
+                </picture>
+            </div>
+            <div class="text-left p-28">
+                <h1 class="text-white font-overpass text-3xl">State of the Art Infrasturcture</h1>
+                <p class="text-justify text-greyish_blue pt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis explicabo numquam pariatur dicta, delectus voluptates! Voluptatem dolorem mollitia nostrum corporis.</p>
+            </div>
+        </div>
+      
+        
     </section>
 </body>
 </html>
